Fix: frist commit

--- a/blog.cfg
+++ b/blog.cfg
@@ -2,3 +2,12 @@ db = "funblog.db"
 port = 8000
 blogName = "WebHaskell"
 blogDescription = "A blog about web programming using Haskell"
+
+#database:
+#  user:     "_env:MYSQL_USER:torquer"
+#  password: "_env:MYSQL_PASSWORD:peco12345"
+#  host:     "_env:MYSQL_HOST:192.168.11.2"
+#  port:     "_env:MYSQL_PORT:3306"
+#  # See config/test-settings.yml for an override during tests
+#  database: "_env:MYSQL_DATABASE:torque"
+#  poolsize: "_env:MYSQL_POOLSIZE:10"
