Fix: mysql setting

--- a/funblog.cabal
+++ b/funblog.cabal
@@ -54,8 +54,8 @@ executable funblog
                        hvect >=0.3,
                        monad-logger >=0.3,
                        mtl >=2.2,
-                       persistent >=2.1,
-                       persistent-sqlite >=2.1,
+                       persistent >=2.2,
+                       persistent-mysql >=2.3,
                        persistent-template >=2.1,
                        random,
                        resourcet,
